# 3d-soft-trunk

./: .gitignore  .gitlab-ci.yml  .gitmodules  Adaptive_logger.csv  CMakeLists.txt  Dockerfile  Doxyfile  ID_logger.csv  MPC_logger_1.csv  MPC_logger_2.csv  MPC_logger_3.csv  MPC_logger_4.csv  MPC_logger_5.csv  MPC_logger_6.csv  MPC_logger_fast1.csv  MPC_logger_fast2.csv  MPC_logger_hor51.csv  MPC_logger_hor52.csv  MPC_logger_hor71.csv  MPC_logger_hor72.csv  MPC_logger_hor73.csv  MPC_logger_longtime1.csv  MPC_logger_longtime2.csv  MPC_logger_nonsafe1.csv  MPC_logger_nonsafe2.csv  MPC_logger_pos51.csv  MPC_logger_pos52.csv  MPC_logger_pos71.csv  MPC_logger_pos72.csv  MPC_logger_safe1.csv  MPC_logger_safe2.csv  MPC_logger_ts1.csv  MPC_logger_ts2.csv  MPC_logger_ts3.csv  MPC_logger_tube1.csv  MPC_logger_tube2.csv  MPC_logger_tube3.csv  OSC_logger.csv  QS_logger.csv  README.md  (+11 more)
BendLabs_Arduino/: BendLabs_Arduino.ino
OSC/: OSC.py  README.md
apps/: A_fun.cpp  A_fun.h  CMakeLists.txt  JDot_fun.cpp  JDot_fun.h  J_fun.cpp  J_fun.h  M_fun.cpp  M_fun.h  OSC.cpp  README.md  c_fun.cpp  c_fun.h  characterization_actuation.cpp  characterize.py  characterize_alpha.cpp  checkPressures.cpp  create_urdf.cpp  d_fun.cpp  d_fun.h  example_Adaptive.cpp  example_AugmentedRigidArm.cpp  example_Characterizer.cpp  example_Controller.cpp  example_Controller_MPC.cpp  example_CurvatureCalculator.cpp  example_FF.cpp  example_Feedforward.cpp  example_IDCon.cpp  example_IKCon.cpp  example_Lagrange.cpp  example_MPC.cpp  example_MPC_circular.cpp  example_MPC_set.cpp  example_Model.cpp  example_OSC.cpp  example_QuasiStatic.cpp  example_Simulator.cpp  example_Simulator_test.cpp  example_SoftTrunkModel.cpp  (+28 more)
config/: AIS_config.yaml  README.md  fullCharacterize.yaml  oliver verification.yaml  softtrunkparams_Lagrange.yaml  softtrunkparams_example.yaml  stateoftheart.yaml  stiffness_vertical_test.yaml  stiffness_vertical_test2.yaml  testing.yaml
examples_python/: 3DPositionTracking.py  detectron_utils.py  example_AugmentedRigidArm.py  example_Controller.py  example_CurvatureCalculator.py  example_Simulator.py  example_SofTrunkModel.py  example_VisualizerROS.py  log_curvature.csv  log_pressure.csv  sopraThrow.py  test_FESTO_keep_valve_open.py  test_SOFA_Qualysis_integration.py  test_SoPRA.py  test_flex_sensor-publish_qualisys.py  test_flex_sensor.py  test_flex_sensor_no_qualisys.py  utils.py
experiment_control/: STEP_kp35000.csv  STEP_kp35000_1.csv  STEP_kp35000_2.csv  STEPs_kp35000_1.csv  Sinus_kp35000.csv  dxdp_McK_bottom_001_1__2000_1_withSoPrA.csv  dxdp_McK_top_001_1__2000_1_withSoPrA.csv
experiment_dadp_McK/: dadp_McK_bottom_001_100_50_2000_1.csv  dadp_McK_bottom_001_100_50_2000_2.csv  dadp_McK_bottom_001_200_100_2000_1.csv  dadp_McK_bottom_001_200_100_2000_2.csv  dadp_McK_bottom_001_250_200_2000_1.csv  dadp_McK_bottom_001_300_200_2000_1.csv  dxdp_McK_bottom_001_100_50_2000_1.csv  dxdp_McK_bottom_001_100_50_2000_2.csv  dxdp_McK_bottom_001_200_100_2000_1.csv  dxdp_McK_bottom_001_200_100_2000_2.csv  dxdp_McK_bottom_001_250_200_2000_1.csv  dxdp_McK_bottom_001_300_200_2000_1.csv  px_McK_bottom_001_100_2000_1.csv  px_McK_bottom_001_100_2000_2.csv  px_McK_bottom_001_100_2000_3.csv
experiment_px_McK/: dxdp_McK_bottom_001_20_2000_4.csv  dxdp_McK_bottom_001_20_2000_5.csv  dxdp_McK_bottom_001_20_2000_6.csv  px_McK_1,5offset_001_20_2000_1.csv  px_McK_1,5offset_001_20_2000_2.csv  px_McK_1,5offset_001_20_2000_3.csv  px_McK_3offset_001_20_2000_1.csv  px_McK_3offset_001_20_2000_2.csv  px_McK_3offset_001_20_2000_3.csv  px_McK_bottom_001_1_2000_1.csv  px_McK_bottom_001_1_2000_2.csv  px_McK_bottom_001_1_2000_3.csv  px_McK_bottom_001_20_2000_1.csv  px_McK_bottom_001_20_2000_2.csv  px_McK_bottom_001_20_2000_3.csv  px_McK_bottom_001_20_2000_7.csv  px_McK_bottom_001_5_2000_1.csv
experiment_px_Pis/: px_Pis_2,5offsett_001_20_500_1.csv  px_Pis_2,5offsett_001_20_500_2.csv  px_Pis_2,5offsett_001_20_500_3.csv  px_Pis_top_001_1_500_1.csv  px_Pis_top_001_1_700_1.csv  px_Pis_top_001_1_700_2.csv  px_Pis_top_001_1_700_3.csv  px_Pis_top_001_20_500_1.csv  px_Pis_top_001_20_500_2.csv  px_Pis_top_001_20_500_3.csv  px_Pis_top_001_30_700_1.csv  px_Pis_top_001_30_700_2.csv  px_Pis_top_001_30_700_3.csv
experiments_ICRA2021/: CMakeLists.txt  grip_weightcomp.cpp  multiobstacleavoid.cpp
experiments_IROS2021/: CMakeLists.txt  README.md  characterization_actuation.cpp  characterize.py  compare_real_sim.py  cyclic_simulation.cpp  record_qtm_frames.cpp  sensor_visualize.cpp  solve_tip_force.cpp
include/: AugmentedRigidArm.h  ControllerPCC.h  CurvatureCalculator.h  SoftTrunk_common.h  csv.h  mdefs.h
include/3d-soft-trunk/: Adaptive.h  AugmentedRigidArm.h  Characterize.h  ControllerPCC.h  CurvatureCalculator.h  Dyn.h  IDCon.h  IKCon.h  LQR.h  Lagrange.h  MPC.h  MPC_constraints_finder.h  MPC_obstacles.h  MPC_robust.h  MPC_ts.h  Manager.h  Model.h  OSC.h  PID.h  QuasiStatic.h  Simulator.h  SoftTrunkModel.h  SoftTrunk_common.h  StateEstimator.h  VisualizerROS.h  backup_adaptive.h  mdefs.h
notebooks/.ipynb_checkpoints/: explore_festo_sensor_data-checkpoint.ipynb
roboa/: CMakeLists.txt
src/: Adaptive.cpp  AugmentedRigidArm.cpp  Characterize.cpp  ControllerPCC.cpp  CurvatureCalculator.cpp  Dyn.cpp  IDCon.cpp  IKCon.cpp  LQR.cpp  Lagrange.cpp  MPC.cpp  MPC_constraints_finder.cpp  MPC_obstacles.cpp  MPC_robust.cpp  MPC_ts.cpp  Model.cpp  OSC.cpp  PID.cpp  QuasiStatic.cpp  README.md  Simulator.cpp  SoftTrunkModel.cpp  StateEstimator.cpp  VisualizerROS.cpp  backup_adaptive.cpp  characterize_alpha.cpp  example_realtime_visualize.cpp  experiment_pid.cpp  python_bindings.cpp  python_bindings_ros.cpp
src/Controllers/: Characterize.cpp  Characterizer.cpp  Dyn.cpp  IDCon.cpp  LQR.cpp  OSC.cpp  PID.cpp  QuasiStatic.cpp
urdf/: .gitignore  1segment_4chamber.urdf  1segment_4chamber.urdf.xacro  2segment.urdf  2segment.urdf.xacro  2segment_prismatic.urdf  README.md  example.urdf  example.urdf.xacro  example_prismatic.urdf  macro_definitions.urdf.xacro  robot.rviz  rviz.launch  xacro2urdf.py
verification/: CMakeLists.txt  model.cpp  stateestimator.cpp
(+20 files in other folders)
