add_executable(single_actuation single_actuation.cpp)
target_link_libraries(single_actuation ValveController QualisysClient)

add_executable(parallel_actuation parallel_actuation.cpp)
target_link_libraries(parallel_actuation ValveController QualisysClient)

add_executable(combined_static_actuation combined_static_actuation.cpp)
target_link_libraries(combined_static_actuation ValveController QualisysClient)

add_executable(combined_dynamic_actuation combined_dynamic_actuation.cpp)
target_link_libraries(combined_dynamic_actuation ValveController QualisysClient)

add_executable(singleandmultipleactuation singleandmultipleactuation.cpp)
target_link_libraries(singleandmultipleactuation ValveController QualisysClient)